# phobos

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG  ChangeLog  Makefile.am  README.developer  README.md  autogen.sh  configure.ac  groups  phobos.spec.in  project.config
src/admin/: Makefile.am  admin.c  admin_utils.h  import.c  import.h  lost.c  lost.h  utils.c  utils.h
src/cli/: Makefile.am  setup.py
src/cli/phobos/: __init__.py  ccfg_module.c  cdss_module.c  cfg.py  cli.py  config.py  dss.py  ffi.py  ldm.py  log.py  lrs.py  output.py  store.py  types.py
src/cli/scripts/: phobos
src/cli/tests/: FileDescTest.py  MPutFileParserTest.py  ObjectAttrTest.py  PhobosCLIRADOSTest.py  PhobosCLITest.py  PhobosCfgTest.py  PhobosDSSTest.py  PhobosDbTest.py  PhobosLDMTest.py  run_tests.sh
src/common/: Makefile.am  attrs.c  common.c  global_state.c  log.c  pho_cache.c  pho_ref.c  saj.c  slist.c  store_utils.c  type_utils.c
src/core/: Makefile.am
src/core/cfg/: cfg.c  cfg_copy.c  compatibility.c
src/core/common/: attrs.c  common.c  global_state.c  log.c  saj.c  type_utils.c
src/core/communication/: Makefile.am  comm.c
src/core/dss/: Makefile.am  copy.c  copy.h  deprecated.c  deprecated.h  device.c  dss.c  dss_lock.c  dss_lock.h  dss_utils.h  extent.c  extent.h  (+11 more)
src/dss/: Makefile.am  copy.c  deprecated.c  deprecated.h  device.c  device.h  dss.c  dss_action_update.c  dss_config.c  dss_config.h  dss_lock.c  dss_lock.h  dss_logs.c  dss_logs.h  dss_utils.c  dss_utils.h  extent.c  extent.h  filters.c  filters.h  full_layout.c  full_layout.h  layout.c  layout.h  logs.c  logs.h  media.c  media.h  object.c  object.h  resources.c  resources.h  wrapper.c
src/hsm/: Makefile.am  hsm_common.c  hsm_common.h  hsm_release_dir.c  hsm_sync_dir.c
src/include/: Makefile.am  pho_attrs.h  pho_cache.h  pho_cfg.h  pho_comm.h  pho_comm_wrapper.h  pho_common.h  pho_daemon.h  pho_dss.h  pho_dss_wrapper.h  pho_extents.h  pho_io.h  pho_layout.h  pho_ldm.h  pho_lrs.h  pho_mapper.h  pho_module_loader.h  pho_ref.h  pho_srl_common.h  pho_srl_lrs.h  pho_srl_tlc.h  pho_stats.h  pho_store_utils.h  pho_type_utils.h  pho_types.h  phobos_admin.h  phobos_store.h  slist.h
src/io-modules/: Makefile.am  io_ltfs.c  io_posix.c  io_posix_common.c  io_posix_common.h  io_rados.c  mapper.c
src/layout/: Makefile.am  layout.c  posix_layout.c  posix_layout.h  raid_common.c  raid_common.h  raid_common_locate.c
src/layout-modules/: Makefile.am  raid1.c  raid1.h  raid4.c  raid4.h  raid5.c  raid5.h  simple.c
src/ldm/: Makefile.am  ldm.c  ldm_common.c  ldm_common.h  ldm_dev_adapters.h  ldm_dev_dir.c  ldm_dev_lintape.c  ldm_dev_rados_pool.c  ldm_dev_scsi_tape.c  ldm_fs_ltfs.c  ldm_fs_posix.c  ldm_lib_dummy.c  ldm_lib_scsi.c  ldm_lib_scsi.h  lintape_lookup.c  scsi_api.c  scsi_api.h  scsi_common.c  scsi_common.h
src/ldm-modules/: Makefile.am  ldm_common.c  ldm_common.h  ldm_dev_dir.c  ldm_dev_rados_pool.c  ldm_dev_scsi_tape.c  ldm_fs_ltfs.c  ldm_fs_posix.c  ldm_fs_rados.c  ldm_lib_dummy.c  ldm_lib_rados.c  ldm_lib_scsi.c  scsi_api.c  scsi_api.h  scsi_common.c  scsi_common.h
src/lrs/: Makefile.am  health.c  health.h  io_sched.c  io_sched.h  lrs.c  lrs_cache.c  lrs_cache.h  lrs_cfg.c  lrs_cfg.h  lrs_device.c  lrs_device.h  lrs_sched.c  lrs_sched.h  lrs_thread.c  lrs_thread.h  lrs_utils.c  lrs_utils.h  phobosd.service
src/proto/: Makefile.am  pho_proto_common.proto  pho_proto_lrs.proto  pho_proto_tlc.proto
src/serializer/: Makefile.am  pho_proto_lrs.proto  srl_lrs.c  srl_tlc.c
src/store/: Makefile.am  io.c  mapper.c  store.c  store_alias.c  store_alias.h  store_list.c  store_profile.c  store_profile.h  store_utils.h
src/tests/: .gitignore  Makefile.am  acceptance.sh  bad.cfg  pho_test_utils.h  pho_test_xfer_utils.h  phobos.conf  raid1_simple_split.sh  raid1_split.sh  setup_db.sh  simple_split.sh  test.cfg  test_attrs.c  test_bad_comm.c  test_bad_comm.sh  test_cfg.c  test_common.c  test_communication.c  test_daemon.sh  test_delete.c  test_delete.sh  test_dev_tape.c  test_dss.c  test_dss.sh  test_env.sh  test_io.c  test_launch_daemon.sh  test_layouts.sh  test_ldm.c  test_lintape.c  test_lock.sh  test_log.c  test_mapper.c  test_media_operation_flags.sh  test_put.c  test_raid1_split_locate.c  test_resource_availability.sh  test_scsi.c  test_scsi.sh  test_scsi_scan.c  (+9 more)
src/tlc/: Makefile.am  phobos_tlc.service  tlc.c  tlc.service  tlc_cfg.c  tlc_cfg.h  tlc_library.c  tlc_library.h
tape_library_certification/: Makefile.am  phobos_tape_library_mtx_test.bash  phobos_tape_library_test.bash  phobos_tape_library_test.c
tests/: .gitignore  Makefile.am  acceptance.sh  pho_test_utils.c  pho_test_utils.h  pho_test_xfer_utils.h  phobos.conf  raid1_simple_split.sh  raid1_split.sh  setup_db.sh  simple_split.sh  tape_drive.sh  test-driver.sh  test_attrs.c  test_bad_comm.c  test_daemon.sh  test_delete.c  test_dss.c  test_dss.sh  test_env.sh  test_launch_daemon.sh  test_ldm.c  test_lock.sh  test_media_operation_flags.sh  test_raid1_split_locate.sh  test_resource_availability.sh  test_setup.c  test_setup.h  test_store.sh  test_store_retry.c  test_store_retry.sh  test_tag_update.sh  test_undelete.c  utils.sh  utils_generation.sh  utils_tape.sh
tests/externs/: Makefile.am  test_delete.sh  test_locate.c  test_object_list.sh  test_overwrite.sh  test_put.sh
tests/interns/: Makefile.am  mock_communication.c  test_attrs.c  test_cfg.c  test_common.c  test_common_error.sh  test_communication.c  test_copy_cfg.c  test_dev_tape.c  test_dss_copy.c  test_dss_extent.c  test_dss_find_object.c  test_dss_lazy_find_object.c  test_dss_lock.c  test_dss_logs.c  test_dss_medium_locate.c  test_dss_object_move.c  test_io.c  test_layout_module.c  test_ldm.c  test_log.c  test_lrs_cfg.c  test_lrs_device.c  test_lrs_scheduling.c  test_ltfs_logs.c  test_mapper.c  test_pho_cache.c  test_phobos_admin_medium_locate.c  test_ping.c  test_scsi_logs.c  test_stats.c  test_store_alias.c  test_store_object_md.c  test_store_object_md_get.c  test_store_profile.c  test_tlc_lib_device.c  test_type_utils.c
tests/prod/: Makefile.am  acceptance.sh  test_rados_rpms.sh
(+409 files in other folders)
