AM_CFLAGS= $(CC_OPT)

noinst_LTLIBRARIES=libpho_common.la

libpho_common_la_SOURCES=attrs.c \
                         common.c \
                         global_state.c \
                         log.c \
                         pho_cache.c \
                         pho_ref.c \
                         saj.c \
                         slist.c \
                         type_utils.c
libpho_common_la_LIBADD=-ljansson -lm
